testData/diagnostics/letAssign.diag.txt
testData/diagnostics/letAssign.nut line = (4) column = (0) : error: can't assign to binding 'y' (probably declaring using 'local' was intended, but 'let' was used)
let y = 30
y = 40
^

